--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="tab_text_2">Tab 2</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="choose_the_item_to_delete">Touch the item to delete </string>
+    <string name="result_of_the_get_request">Result of the GET request</string>
+    <string name="delete">DELETE</string>
+    <string name="load_items">Load items</string>
 </resources>
